// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AuthService loginWithGoogle should create a new user when user does not exist 1`] = `
UserModel {
  "accountDeactivated": false,
  "accountType": "google",
  "createdAt": 2020-01-01T00:00:00.000Z,
  "defaultMessage": null,
  "desktopNotifsEnabled": false,
  "email": "mocked_email@example.com",
  "emailVerified": true,
  "firstName": "John",
  "hideInsights": null,
  "id": 1,
  "includeDefaultMessage": true,
  "lastName": "Doe",
  "name": "John Doe",
  "organizationUser": OrganizationUserModel {
    "id": 1,
    "organizationId": 2,
    "role": "member",
    "userId": 1,
  },
  "password": null,
  "photoURL": "mocked_picture_url",
  "readChangeLog": false,
  "sid": null,
  "userRole": "user",
}
`;

exports[`AuthService loginWithShibboleth should create a new user when user does not exist 1`] = `
UserModel {
  "accountDeactivated": false,
  "accountType": "shibboleth",
  "createdAt": 2020-01-01T00:00:00.000Z,
  "defaultMessage": null,
  "desktopNotifsEnabled": false,
  "email": "mocked_email@example.com",
  "emailVerified": true,
  "firstName": "John",
  "hideInsights": null,
  "id": 1,
  "includeDefaultMessage": true,
  "lastName": "Doe",
  "name": "John Doe",
  "organizationUser": OrganizationUserModel {
    "id": 1,
    "organizationId": 2,
    "role": "member",
    "userId": 1,
  },
  "password": null,
  "photoURL": null,
  "readChangeLog": false,
  "sid": null,
  "userRole": "user",
}
`;
